# 1D_Time-Independent_BVP_Library

./: CMakeLists.txt  Makefile  README.md
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/bvp_lib/: CMakeLists.txt  boundary_conditions.cpp  boundary_conditions.hpp  bvplib.cpp  bvplib.hpp  finite_difference_method.cpp  finite_difference_method.hpp  linear_system.cpp  linear_system.hpp  matrix_operations.cpp  matrix_operations.hpp  node.hpp  second_order_ODE.hpp  vector_operations.cpp  vector_operations.hpp
tests/: CMakeLists.txt  main.cpp
